# Connect4_cpp

./: BoardTest.cpp  CMakeLists.txt  HelloTest.cc  README.md  Test.cc
include/: Board.h  BotPlayer.h  Game.h  HumanPlayer.h  Player.h
src/: Board.cpp  BotPlayer.cpp  Game.cpp  HumanPlayer.cpp  Player.cpp  main.cpp
